--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
-Patrick Altman
-James Tauber
-Anna Ossowski
-Graham Ullrich
-Katherine "Kati" Michel
+Patrick Altman <paltman@gmail.com>
+James Tauber <jtauber@jtauber.com>
+ImErick <3r1ck.442@gmail.com>
+Anna Ossowski <ossanna16@gmx.de>
+Graham Ullrich <graham@flyingcracker.com>
+Katherine Michel <kthrnmichel@gmail.com>
+blag <blag@users.noreply.github.com>
